添加动态连接数据库接口
